# pandas-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/modules/users/: controller.rs  dto.rs  repository.rs  schema.rs  service.rs  service_test.rs
src/templates/: controller_template.rs  dto_template.rs  module_template.rs  repository_template.rs  schema_template.rs  service_template.rs  test_template.rs
